[tool.poetry]
name = "ine"
version = "0.1.0"
description = ""
authors = ["Mohammad <ghms28@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.11"
pandas = "^2.2.3"
numpy = "2.0.2"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
